# ZoKrates

./: Cargo.toml
zokrates_abi/src/: lib.rs
zokrates_analysis/src/: assembly_transformer.rs  boolean_array_comparator.rs  condition_redefiner.rs  constant_argument_checker.rs  constant_resolver.rs  dead_code.rs  expression_validator.rs  flat_propagation.rs  flatten_complex_types.rs  lib.rs  log_ignorer.rs  out_of_bounds.rs  panic_extractor.rs  propagation.rs  struct_concretizer.rs  uint_optimizer.rs  variable_write_remover.rs  zir_propagation.rs
zokrates_analysis/src/reducer/: constants_reader.rs  constants_writer.rs  inline.rs  mod.rs  shallow_ssa.rs
zokrates_ark/src/: gm17.rs  groth16.rs  lib.rs  marlin.rs
zokrates_ast/: Cargo.toml
zokrates_ast/src/common/: embed.rs  error.rs  expressions.rs  format_string.rs  metadata.rs  mod.rs  parameter.rs  position.rs  solvers.rs  statements.rs  variable.rs
zokrates_ast/src/common/flat/: parameter.rs  variable.rs
zokrates_ast/src/flat/: folder.rs  mod.rs  utils.rs
zokrates_ast/src/ir/: clean.rs  expression.rs  folder.rs  from_flat.rs  mod.rs  serialize.rs  smtlib2.rs  visitor.rs  witness.rs
zokrates_ast/src/typed/: abi.rs  folder.rs  identifier.rs  integer.rs  mod.rs  parameter.rs  result_folder.rs  types.rs  uint.rs  variable.rs
zokrates_ast/src/typed/utils/: mod.rs
zokrates_ast/src/untyped/: from_ast.rs  mod.rs  types.rs  variable.rs
zokrates_ast/src/zir/: canonicalizer.rs  folder.rs  from_typed.rs  identifier.rs  lqc.rs  mod.rs  result_folder.rs  types.rs  uint.rs  variable.rs
zokrates_bellman/src/: groth16.rs  lib.rs
zokrates_bellpepper/: Cargo.toml
zokrates_bellpepper/examples/: 10_cubes_bellpepper.rs
zokrates_bellpepper/src/: lib.rs  nova.rs
zokrates_circom/src/: lib.rs  r1cs.rs  witness.rs
zokrates_cli/: Cargo.toml
zokrates_cli/src/: bin.rs  cli_constants.rs
zokrates_cli/src/ops/: check.rs  compile.rs  compute_witness.rs  export_verifier.rs  generate_proof.rs  generate_smtlib2.rs  inspect.rs  mod.rs  print_proof.rs  profile.rs  setup.rs  universal_setup.rs  verify.rs
zokrates_cli/src/ops/mpc/: beacon.rs  contribute.rs  export.rs  init.rs  verify.rs
zokrates_cli/src/ops/nova/: compress.rs  prove.rs  setup.rs  verify.rs
zokrates_cli/tests/: integration.rs
zokrates_codegen/: Cargo.toml
zokrates_codegen/src/: lib.rs  utils.rs
zokrates_common/: Cargo.toml
zokrates_common/src/: constants.rs  helpers.rs
zokrates_core/: Cargo.toml
zokrates_core/src/: compile.rs  imports.rs  semantics.rs
zokrates_core/src/optimizer/: directive.rs  duplicate.rs  mod.rs  redefinition.rs  tautology.rs
zokrates_embed/src/: ark.rs  bellman.rs
zokrates_field/: Cargo.toml
zokrates_field/src/: bn128.rs  dummy_curve.rs  lib.rs  pallas.rs  vesta.rs
zokrates_fs_resolver/src/: lib.rs
zokrates_interpreter/src/: lib.rs
zokrates_js/: build.rs
zokrates_js/src/: lib.rs  util.rs
zokrates_parser/src/: lib.rs
zokrates_pest_ast/src/: lib.rs
zokrates_proof_systems/src/: lib.rs  solidity.rs  to_token.rs
zokrates_proof_systems/src/scheme/: gm17.rs  groth16.rs  marlin.rs
zokrates_test/src/: lib.rs
zokrates_test/tests/: wasm.rs
zokrates_test_derive/src/: lib.rs
