[package]
edition = "2021"
name = "zokrates_ast"
version = "0.1.7"

[features]
ark = ["ark-bls12-377", "zokrates_embed/ark"]
bellman = ["zokrates_field/bellman_extensions", "pairing_ce", "zokrates_embed/bellman"]
bellpepper = ["zokrates_field/bellpepper_extensions"]
bellperson = ["zokrates_field/bellperson_extensions"]
default = ["bellpepper", "ark"]

[dependencies]
ark-bls12-377 = {version = "^0.3.0", features = ["curve"], default-features = false, optional = true}
byteorder = "1.4.3"
cfg-if = "0.1"
derivative = "2.2.0"
num-bigint = {version = "0.2", default-features = false}
pairing_ce = {version = "^0.21", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = {version = "1.0", features = ["preserve_order"]}
zokrates_embed = {version = "0.1.0", path = "../zokrates_embed", default-features = false}
zokrates_field = {version = "0.5", path = "../zokrates_field", default-features = false}
zokrates_pest_ast = {version = "0.3.0", path = "../zokrates_pest_ast"}
