[package]
authors = ["Jacob Eberhardt <jacob.eberhardt@tu-berlin.de>", "Dennis Kuhnert <mail@kyroy.com>", "Thibaut Schaeffer <thibaut@schaeff.fr>"]
edition = "2018"
name = "zokrates_cli"
repository = "https://github.com/Zokrates/ZoKrates.git"
version = "0.8.7"

[features]
ark = ["zokrates_ark", "zokrates_core/ark", "zokrates_common/ark"]
bellman = ["zokrates_bellman", "zokrates_core/bellman", "zokrates_common/bellman"]
bellpepper = ["zokrates_bellpepper", "zokrates_core/bellpepper", "zokrates_common/bellpepper"]
# bellperson = ["zokrates_bellperson", "zokrates_core/bellperson", "zokrates_common/bellperson"]
default = ["bellpepper"]

[dependencies]
blake2 = "0.8.1"
byteorder = "1"
cfg-if = "0.1"
clap = "2.26.2"
dirs = "3.0.1"
env_logger = "0.9.0"
hex = "0.3.1"
lazy_static = "1.4.0"
log = "0.4"
rand_0_4 = {version = "0.4", package = "rand"}
rand_0_8 = {version = "0.8", package = "rand"}
regex = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = {version = "1.0", features = ["preserve_order"]}
sha2 = "0.10.0"
typed-arena = "1.4.1"
zokrates_abi = {version = "0.1", path = "../zokrates_abi"}
zokrates_ast = {version = "0.1", path = "../zokrates_ast", default-features = false}
zokrates_circom = {version = "0.1", path = "../zokrates_circom", default-features = false}
zokrates_common = {version = "0.1", path = "../zokrates_common", default-features = false}
zokrates_core = {version = "0.7", path = "../zokrates_core", default-features = false}
zokrates_embed = {version = "0.1", path = "../zokrates_embed", features = ["multicore"]}
zokrates_field = {version = "0.5", path = "../zokrates_field", features = ["multicore"]}
zokrates_fs_resolver = {version = "0.5", path = "../zokrates_fs_resolver"}
zokrates_interpreter = {version = "0.1", path = "../zokrates_interpreter", default-features = false}
zokrates_profiler = {version = "0.1", path = "../zokrates_profiler", default-features = false}

# Backends
zokrates_ark = {version = "0.1", path = "../zokrates_ark", features = ["multicore"], optional = true}
zokrates_bellman = {version = "0.1", path = "../zokrates_bellman", features = ["multicore"], optional = true}
zokrates_bellpepper = {version = "0.1", path = "../zokrates_bellpepper", default-features = false, optional = true}
# zokrates_bellperson = {version = "0.1", path = "../zokrates_bellperson", default-features = false, optional = true}
zokrates_proof_systems = {version = "0.1", path = "../zokrates_proof_systems", default-features = false}

[dev-dependencies]
assert_cli = "0.5"
ethabi = "17.0.0"
fs_extra = "1.1.0"
glob = "0.2.11"
pretty_assertions = "1.2.1"
primitive-types = {version = "0.11", features = ["rlp"]}
tempdir = "0.3"

[build-dependencies]
fs_extra = "1.1.0"

[[bin]]
name = "zokrates"
path = "src/bin.rs"
