[package]
edition = "2021"
name = "zokrates_codegen"
version = "0.1.3"

[features]
ark = ["zokrates_ast/ark", "zokrates_embed/ark", "zokrates_common/ark", "zokrates_interpreter/ark"]
bellman = ["zokrates_ast/bellman", "zokrates_embed/bellman", "zokrates_common/bellman", "zokrates_interpreter/bellman"]
bellperson = ["zokrates_ast/bellperson", "zokrates_common/bellperson"]
default = ["ark", "bellman"]

[dependencies]
zokrates_ast = {version = "0.1", path = "../zokrates_ast", default-features = false}
zokrates_common = {version = "0.1.0", path = "../zokrates_common", default-features = false}
zokrates_embed = {version = "0.1.0", path = "../zokrates_embed", default-features = false}
zokrates_field = {version = "0.5.0", path = "../zokrates_field", default-features = false}
zokrates_interpreter = {version = "0.1", path = "../zokrates_interpreter", default-features = false}
