[package]
authors = ["dark64 <darem966@gmail.com>"]
edition = "2018"
name = "zokrates_common"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ark = []
bellman = []
bellpepper = []
bellperson = []
default = ["bellman", "ark", "bellpepper"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
