[package]
authors = ["Thibaut Schaeffer <thibaut@schaeff.fr>", "Guillaume Ballet <gballet@gmail.com>"]
edition = "2021"
name = "zokrates_field"
version = "0.5.5"

[features]
bellman_extensions = ["bellman_ce"]
bellpepper_extensions = ["bellpepper-core", "ff", "pasta_curves", "nova-snark"]
bellperson_extensions = ["bellperson", "pairing", "ff", "pasta_curves", "nova-snark"]
default = ["bellman_extensions"]
multicore = ["ark-ff/parallel", "ark-ec/parallel"]

[dependencies]
bincode = "0.8.0"
lazy_static = "1.4"
num-integer = {version = "0.1", default-features = false}
num-traits = {version = "0.2", default-features = false}
serde = "1.0"
serde_derive = "1.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
sha2 = "0.8.0"

# bellman
bellman_ce = {version = "^0.3", default-features = false, optional = true}

# bellperson
bellperson = {version = "0.25", default-features = false, optional = true}
ff = {version = "0.13.0", default-features = false, optional = true}
pairing = {version = "0.22", default-features = false, optional = true}
pasta_curves = {version = "0.5", features = ["repr-c", "serde"], optional = true}

bellpepper-core = {version = "0.4.0", default-features = false, optional = true}

# ark
ark-bls12-377 = {version = "^0.3.0", features = ["curve"], default-features = false}
ark-bls12-381 = {version = "^0.3.0", features = ["curve"]}
ark-bn254 = {version = "^0.3.0", features = ["curve"], default-features = false}
ark-bw6-761 = {version = "^0.3.0", default-features = false}
ark-ec = {version = "^0.3.0", default-features = false}
ark-ff = {version = "^0.3.0", default-features = false}
ark-pallas = {version = "^0.3.0", features = ["curve"]}
ark-secp256k1 = {version = "0.4.0"}
ark-secq256k1 = {version = "0.4.0"}
ark-serialize = {version = "^0.3.0", default-features = false, features = ["std"]}
ark-vesta = {version = "^0.3.0"}

halo2curves = "0.6.1"

# [target.'cfg(feature = "bellperson_extensions")'.dependencies]
# nova-snark = {version = "0.21.0", optional = true}

# [target.'cfg(feature = "bellpepper_extensions")'.dependencies]
nova-snark = {version = "0.36.0", optional = true}

[dev-dependencies]
rand = "0.4"

[dependencies.num-bigint]
features = ["serde"]
version = "0.2"
